# llmtop

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: cli.hpp  jthread_compat.hpp  main.cpp  state.hpp  util.hpp
src/sources/: demo_source.cpp  demo_source.hpp  http.hpp  llamacpp_source.cpp  llamacpp_source.hpp  nvml_source.cpp  nvml_source.hpp  ollama_source.cpp  ollama_source.hpp  prometheus.hpp  source.hpp
src/ui/: bigtext.cpp  footer.cpp  gpu_panel.cpp  header.cpp  slots_panel.cpp  throughput_panel.cpp  ui.cpp  ui.hpp
